--- a/simple.ipynb
+++ b/simple.ipynb
@@ -39,7 +39,7 @@
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8,183 kB]\n",
       "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [237 kB]\n",
       "Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [14.6 kB]\n",
-      "Fetched 8,643 kB in 3s (3,280 kB/s)\n",
+      "Fetched 8,643 kB in 2s (3,823 kB/s)\n",
       "\n",
       "\n",
       "\n",
@@ -48,7 +48,7 @@
       "  libbsd0 libmd0 libx11-6 libx11-data libxau6 libxcb1 libxdmcp6\n",
       "The following NEW packages will be installed:\n",
       "  libbsd0 libmd0 libx11-6 libx11-data libxau6 libxcb1 libxdmcp6 libxrender1\n",
-      "0 upgraded, 8 newly installed, 0 to remove and 1 not upgraded.\n",
+      "0 upgraded, 8 newly installed, 0 to remove and 18 not upgraded.\n",
       "Need to get 1,437 kB of archives.\n",
       "After this operation, 4,065 kB of additional disk space will be used.\n",
       "Get:1 http://deb.debian.org/debian bullseye/main amd64 libmd0 amd64 1.0.3-3 [28.0 kB]\n",
@@ -59,7 +59,7 @@
       "Get:6 http://deb.debian.org/debian bullseye/main amd64 libx11-data all 2:1.7.2-1 [311 kB]\n",
       "Get:7 http://deb.debian.org/debian bullseye/main amd64 libx11-6 amd64 2:1.7.2-1 [772 kB]\n",
       "Get:8 http://deb.debian.org/debian bullseye/main amd64 libxrender1 amd64 1:0.9.10-1 [33.0 kB]\n",
-      "Fetched 1,437 kB in 1s (1,023 kB/s)\n",
+      "Fetched 1,437 kB in 0s (14.1 MB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 8.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -104,14 +104,14 @@
       "  libice6 x11-common\n",
       "The following NEW packages will be installed:\n",
       "  libice6 libsm6 libxext6 x11-common\n",
-      "0 upgraded, 4 newly installed, 0 to remove and 1 not upgraded.\n",
+      "0 upgraded, 4 newly installed, 0 to remove and 18 not upgraded.\n",
       "Need to get 399 kB of archives.\n",
       "After this operation, 660 kB of additional disk space will be used.\n",
       "Get:1 http://deb.debian.org/debian bullseye/main amd64 x11-common all 1:7.7+22 [252 kB]\n",
       "Get:2 http://deb.debian.org/debian bullseye/main amd64 libice6 amd64 2:1.0.10-1 [58.5 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye/main amd64 libsm6 amd64 2:1.2.3-1 [35.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxext6 amd64 2:1.3.3-1.1 [52.7 kB]\n",
-      "Fetched 399 kB in 0s (1,020 kB/s)\n",
+      "Fetched 399 kB in 0s (3,879 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 4.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 156,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -160,19 +160,20 @@
     "from rdkit.Chem import Draw\n",
     "from rdkit.Chem import AllChem\n",
     "from rdkit import Chem\n",
-    "import py3Dmol"
+    "import py3Dmol\n",
+    "import numpy as np"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 157,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "[12:49:02] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
+      "[08:28:06] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
      ]
     }
    ],
@@ -182,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 158,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16825997438145587\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16825997438145587\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16825997438145587 = null;\nvar warn = document.getElementById(\"3dmolwarning_16825997438145587\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16825997438145587 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16825997438145587\"),{backgroundColor:\"white\"});\nviewer_16825997438145587.zoomTo();\n\tviewer_16825997438145587.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000    0.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16825997438145587.setStyle({\"stick\": {}});\n\tviewer_16825997438145587.zoomTo();\nviewer_16825997438145587.render();\n});\n</script>",
-      "text/html": "<div id=\"3dmolviewer_16825997438145587\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16825997438145587\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16825997438145587 = null;\nvar warn = document.getElementById(\"3dmolwarning_16825997438145587\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16825997438145587 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16825997438145587\"),{backgroundColor:\"white\"});\nviewer_16825997438145587.zoomTo();\n\tviewer_16825997438145587.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000    0.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16825997438145587.setStyle({\"stick\": {}});\n\tviewer_16825997438145587.zoomTo();\nviewer_16825997438145587.render();\n});\n</script>"
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16831024881767478\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16831024881767478\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16831024881767478 = null;\nvar warn = document.getElementById(\"3dmolwarning_16831024881767478\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16831024881767478 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16831024881767478\"),{backgroundColor:\"white\"});\nviewer_16831024881767478.zoomTo();\n\tviewer_16831024881767478.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16831024881767478.setStyle({\"stick\": {}});\n\tviewer_16831024881767478.zoomTo();\nviewer_16831024881767478.render();\n});\n</script>",
+      "text/html": "<div id=\"3dmolviewer_16831024881767478\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16831024881767478\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16831024881767478 = null;\nvar warn = document.getElementById(\"3dmolwarning_16831024881767478\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16831024881767478 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16831024881767478\"),{backgroundColor:\"white\"});\nviewer_16831024881767478.zoomTo();\n\tviewer_16831024881767478.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16831024881767478.setStyle({\"stick\": {}});\n\tviewer_16831024881767478.zoomTo();\nviewer_16831024881767478.render();\n});\n</script>"
      },
      "metadata": {}
     }
@@ -205,7 +206,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "[0.0, 0.3141592653589793, 0.6283185307179586, 0.9424777960769379, 1.2566370614359172, 1.5707963267948966, 1.8849555921538759, 2.199114857512855, 2.5132741228718345, 2.827433388230814]\n"
+     ]
+    }
+   ],
+   "source": [
+    "d = 10\n",
+    "angle = 0.0\n",
+    "angle_incr = np.pi/d\n",
+    "d_angles = [angle]\n",
+    "for i in range(1, d):\n",
+    "    angle += angle_incr\n",
+    "    d_angles.append(angle)\n",
+    "print(d_angles)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -230,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 160,
+   "execution_count": 192,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 193,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -269,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 184,
+   "execution_count": 194,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 185,
+   "execution_count": 195,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +345,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 185
+     "execution_count": 195
     }
    ],
    "source": [
@@ -332,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 186,
+   "execution_count": 196,
    "metadata": {},
    "outputs": [
     {
@@ -346,7 +371,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 186
+     "execution_count": 196
     }
    ],
    "source": [
@@ -358,7 +383,16 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "r, g and b\n",
+    "r + g + b = 1\n",
+    "\n",
+    "min{ ((r + g + b) - 1)^2 }\n",
+    "0 0 0 - 1\n",
+    "1 0 0 - 0\n",
+    "\n",
+    "\n"
+   ]
   }
  ]
 }
