--- a/simple.ipynb
+++ b/simple.ipynb
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "[20:10:20] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
+      "[00:08:07] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
      ]
     }
    ],
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1683231023517131\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683231023517131\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683231023517131 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683231023517131\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683231023517131 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683231023517131\"),{backgroundColor:\"white\"});\nviewer_1683231023517131.zoomTo();\n\tviewer_1683231023517131.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683231023517131.setStyle({\"stick\": {}});\n\tviewer_1683231023517131.zoomTo();\nviewer_1683231023517131.render();\n});\n</script>",
-      "text/html": "<div id=\"3dmolviewer_1683231023517131\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683231023517131\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683231023517131 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683231023517131\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683231023517131 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683231023517131\"),{backgroundColor:\"white\"});\nviewer_1683231023517131.zoomTo();\n\tviewer_1683231023517131.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683231023517131.setStyle({\"stick\": {}});\n\tviewer_1683231023517131.zoomTo();\nviewer_1683231023517131.render();\n});\n</script>"
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1683245289305987\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683245289305987\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683245289305987 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683245289305987\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683245289305987 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683245289305987\"),{backgroundColor:\"white\"});\nviewer_1683245289305987.zoomTo();\n\tviewer_1683245289305987.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683245289305987.setStyle({\"stick\": {}});\n\tviewer_1683245289305987.zoomTo();\nviewer_1683245289305987.render();\n});\n</script>",
+      "text/html": "<div id=\"3dmolviewer_1683245289305987\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683245289305987\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683245289305987 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683245289305987\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683245289305987 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683245289305987\"),{backgroundColor:\"white\"});\nviewer_1683245289305987.zoomTo();\n\tviewer_1683245289305987.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683245289305987.setStyle({\"stick\": {}});\n\tviewer_1683245289305987.zoomTo();\nviewer_1683245289305987.render();\n});\n</script>"
      },
      "metadata": {}
     }
@@ -250,12 +250,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
     "#fix C1 and rotate C4\n",
-    "theta = 3*np.pi/2\n",
+    "theta = np.pi\n",
     "x_dash = C2_coords.x\n",
     "y_dash = C2_coords.y\n",
     "z_dash = C2_coords.z\n",
@@ -275,14 +275,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "[[-1.8369702e-16  0.0000000e+00  1.0000000e+00  0.0000000e+00]\n [ 0.0000000e+00  1.0000000e+00  0.0000000e+00  0.0000000e+00]\n [ 1.0000000e+00  0.0000000e+00 -1.8369702e-16  0.0000000e+00]\n [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  1.0000000e+00]]\n"
+      "[[-1.0000000e+00  0.0000000e+00 -1.2246468e-16  0.0000000e+00]\n [ 0.0000000e+00  1.0000000e+00  0.0000000e+00  0.0000000e+00]\n [-1.2246468e-16  0.0000000e+00 -1.0000000e+00  0.0000000e+00]\n [ 0.0000000e+00  0.0000000e+00  0.0000000e+00  1.0000000e+00]]\n"
      ]
     }
    ],
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 16
+     "execution_count": 54
     }
    ],
    "source": [
@@ -338,21 +338,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "array([[ 6.123234e-17],\n",
-       "       [ 1.500000e+00],\n",
-       "       [-1.000000e+00],\n",
-       "       [ 1.000000e+00]])"
+       "array([[-1.0000000e+00],\n",
+       "       [ 1.5000000e+00],\n",
+       "       [-1.2246468e-16],\n",
+       "       [ 1.0000000e+00]])"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 55
     }
    ],
    "source": [
