--- a/simple.ipynb
+++ b/simple.ipynb
@@ -37,9 +37,9 @@
       "Get:2 http://deb.debian.org/debian-security bullseye-security InRelease [48.4 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye-updates InRelease [44.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8,183 kB]\n",
-      "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [238 kB]\n",
+      "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [240 kB]\n",
       "Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [14.6 kB]\n",
-      "Fetched 8,644 kB in 2s (3,738 kB/s)\n",
+      "Fetched 8,646 kB in 3s (2,887 kB/s)\n",
       "\n",
       "\n",
       "\n",
@@ -59,7 +59,7 @@
       "Get:6 http://deb.debian.org/debian bullseye/main amd64 libx11-data all 2:1.7.2-1 [311 kB]\n",
       "Get:7 http://deb.debian.org/debian bullseye/main amd64 libx11-6 amd64 2:1.7.2-1 [772 kB]\n",
       "Get:8 http://deb.debian.org/debian bullseye/main amd64 libxrender1 amd64 1:0.9.10-1 [33.0 kB]\n",
-      "Fetched 1,437 kB in 0s (15.2 MB/s)\n",
+      "Fetched 1,437 kB in 0s (5,177 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 8.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -111,7 +111,7 @@
       "Get:2 http://deb.debian.org/debian bullseye/main amd64 libice6 amd64 2:1.0.10-1 [58.5 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye/main amd64 libsm6 amd64 2:1.2.3-1 [35.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxext6 amd64 2:1.3.3-1.1 [52.7 kB]\n",
-      "Fetched 399 kB in 0s (3,831 kB/s)\n",
+      "Fetched 399 kB in 0s (3,377 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 4.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -166,14 +166,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "[00:08:07] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
+      "[13:48:13] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
      ]
     }
    ],
@@ -183,14 +183,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1683245289305987\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683245289305987\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683245289305987 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683245289305987\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683245289305987 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683245289305987\"),{backgroundColor:\"white\"});\nviewer_1683245289305987.zoomTo();\n\tviewer_1683245289305987.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683245289305987.setStyle({\"stick\": {}});\n\tviewer_1683245289305987.zoomTo();\nviewer_1683245289305987.render();\n});\n</script>",
-      "text/html": "<div id=\"3dmolviewer_1683245289305987\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1683245289305987\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1683245289305987 = null;\nvar warn = document.getElementById(\"3dmolwarning_1683245289305987\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1683245289305987 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1683245289305987\"),{backgroundColor:\"white\"});\nviewer_1683245289305987.zoomTo();\n\tviewer_1683245289305987.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_1683245289305987.setStyle({\"stick\": {}});\n\tviewer_1683245289305987.zoomTo();\nviewer_1683245289305987.render();\n});\n</script>"
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16842449096437204\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16842449096437204\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16842449096437204 = null;\nvar warn = document.getElementById(\"3dmolwarning_16842449096437204\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16842449096437204 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16842449096437204\"),{backgroundColor:\"white\"});\nviewer_16842449096437204.zoomTo();\n\tviewer_16842449096437204.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16842449096437204.setStyle({\"stick\": {}});\n\tviewer_16842449096437204.zoomTo();\nviewer_16842449096437204.render();\n});\n</script>",
+      "text/html": "<div id=\"3dmolviewer_16842449096437204\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16842449096437204\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16842449096437204 = null;\nvar warn = document.getElementById(\"3dmolwarning_16842449096437204\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16842449096437204 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16842449096437204\"),{backgroundColor:\"white\"});\nviewer_16842449096437204.zoomTo();\n\tviewer_16842449096437204.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16842449096437204.setStyle({\"stick\": {}});\n\tviewer_16842449096437204.zoomTo();\nviewer_16842449096437204.render();\n});\n</script>"
      },
      "metadata": {}
     }
@@ -250,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -326,7 +326,7 @@
       ]
      },
      "metadata": {},
-     "execution_count": 54
+     "execution_count": 9
     }
    ],
    "source": [
@@ -338,30 +338,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "array([[-1.0000000e+00],\n",
-       "       [ 1.5000000e+00],\n",
-       "       [-1.2246468e-16],\n",
-       "       [ 1.0000000e+00]])"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 55
-    }
-   ],
+   "outputs": [],
    "source": [
-    "np.matmul(rot_mat, C4_array)\n"
+    "new_vector = np.matmul(rot_mat, C4_array)\n",
+    "print(new_vector)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -458,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -469,14 +456,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "  x11 x12 x13 x14 energy num_oc.\n0   0   0   1   0 -11.25       1\n1   0   0   1   0 -11.25       1\n3   0   0   1   0 -11.25       1\n4   0   0   1   0 -11.25       1\n2   0   1   0   0  -9.25       1\n9   0   0   0   1  -9.25       1\n5   0   1   1   0  -8.25       1\n6   0   0   1   1  -8.25       1\n7   0   0   1   1  -8.25       1\n8   0   0   1   1  -8.25       1\n['BINARY', 10 rows, 10 samples, 4 variables]\n"
+      "  x11 x12 x13 x14 energy num_oc.\n0   0   0   1   0 -11.25       1\n5   0   0   1   0 -11.25       1\n7   0   0   1   0 -11.25       1\n9   0   0   1   0 -11.25       1\n2   0   1   0   0  -9.25       1\n1   0   0   1   1  -8.25       1\n3   0   1   1   0  -8.25       1\n8   0   1   1   0  -8.25       1\n4   1   0   0   0  -4.25       1\n6   1   0   0   0  -4.25       1\n['BINARY', 10 rows, 10 samples, 4 variables]\n"
      ]
     }
    ],
@@ -487,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -498,27 +485,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "  x11 x12 x13 x14 energy num_oc. chain_.\n0   0   0   1   0 -11.25     478     0.0\n1   0   0   0   1  -9.25     206     0.0\n2   0   1   0   0  -9.25     165     0.0\n3   0   1   1   0  -8.25      55     0.0\n4   0   0   1   1  -8.25      77     0.0\n5   1   0   0   0  -4.25      11     0.0\n6   1   0   1   0  -3.25       3     0.0\n7   1   0   0   1  -1.25       2     0.0\n8   1   1   0   0  -1.25       3     0.0\n['BINARY', 9 rows, 1000 samples, 4 variables]\n"
+      "  x11 x12 x13 x14 energy num_oc. chain_.\n0   0   0   1   0 -11.25     479     0.0\n1   0   0   0   1  -9.25      97     0.0\n2   0   1   0   0  -9.25     194     0.0\n3   0   0   1   1  -8.25      80     0.0\n4   0   1   1   0  -8.25     136     0.0\n5   1   0   0   0  -4.25       6     0.0\n6   1   0   1   0  -3.25       2     0.0\n7   0   1   0   1  -2.25       2     0.0\n8   1   1   0   0  -1.25       2     0.0\n9   1   0   0   1  -1.25       2     0.0\n['BINARY', 10 rows, 1000 samples, 4 variables]\n"
      ]
     }
    ],
    "source": [
     "print(sampleset)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ]
 }
