--- a/simple.ipynb
+++ b/simple.ipynb
@@ -37,9 +37,9 @@
       "Get:2 http://deb.debian.org/debian-security bullseye-security InRelease [48.4 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye-updates InRelease [44.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8,183 kB]\n",
-      "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [240 kB]\n",
+      "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [243 kB]\n",
       "Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [14.6 kB]\n",
-      "Fetched 8,646 kB in 3s (2,887 kB/s)\n",
+      "Fetched 8,649 kB in 3s (3,352 kB/s)\n",
       "\n",
       "\n",
       "\n",
@@ -59,7 +59,7 @@
       "Get:6 http://deb.debian.org/debian bullseye/main amd64 libx11-data all 2:1.7.2-1 [311 kB]\n",
       "Get:7 http://deb.debian.org/debian bullseye/main amd64 libx11-6 amd64 2:1.7.2-1 [772 kB]\n",
       "Get:8 http://deb.debian.org/debian bullseye/main amd64 libxrender1 amd64 1:0.9.10-1 [33.0 kB]\n",
-      "Fetched 1,437 kB in 0s (5,177 kB/s)\n",
+      "Fetched 1,437 kB in 0s (10.6 MB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 8.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -111,7 +111,7 @@
       "Get:2 http://deb.debian.org/debian bullseye/main amd64 libice6 amd64 2:1.0.10-1 [58.5 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye/main amd64 libsm6 amd64 2:1.2.3-1 [35.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxext6 amd64 2:1.3.3-1.1 [52.7 kB]\n",
-      "Fetched 399 kB in 0s (3,377 kB/s)\n",
+      "Fetched 399 kB in 0s (4,202 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 4.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -173,12 +173,12 @@
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "[13:48:13] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
+      "[13:09:49] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
      ]
     }
    ],
    "source": [
-    "mol = rdkit.Chem.MolFromMol2File('./simple.mol2')"
+    "mol = rdkit.Chem.MolFromMol2File('./two_rot_simple.mol2')"
    ]
   },
   {
