--- a/simple.ipynb
+++ b/simple.ipynb
@@ -26,7 +26,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -39,7 +39,7 @@
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 Packages [8,183 kB]\n",
       "Get:5 http://deb.debian.org/debian-security bullseye-security/main amd64 Packages [243 kB]\n",
       "Get:6 http://deb.debian.org/debian bullseye-updates/main amd64 Packages [14.6 kB]\n",
-      "Fetched 8,649 kB in 3s (3,352 kB/s)\n",
+      "Fetched 8,649 kB in 3s (3,186 kB/s)\n",
       "\n",
       "\n",
       "\n",
@@ -59,7 +59,7 @@
       "Get:6 http://deb.debian.org/debian bullseye/main amd64 libx11-data all 2:1.7.2-1 [311 kB]\n",
       "Get:7 http://deb.debian.org/debian bullseye/main amd64 libx11-6 amd64 2:1.7.2-1 [772 kB]\n",
       "Get:8 http://deb.debian.org/debian bullseye/main amd64 libxrender1 amd64 1:0.9.10-1 [33.0 kB]\n",
-      "Fetched 1,437 kB in 0s (10.6 MB/s)\n",
+      "Fetched 1,437 kB in 0s (5,993 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 8.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -111,7 +111,7 @@
       "Get:2 http://deb.debian.org/debian bullseye/main amd64 libice6 amd64 2:1.0.10-1 [58.5 kB]\n",
       "Get:3 http://deb.debian.org/debian bullseye/main amd64 libsm6 amd64 2:1.2.3-1 [35.1 kB]\n",
       "Get:4 http://deb.debian.org/debian bullseye/main amd64 libxext6 amd64 2:1.3.3-1.1 [52.7 kB]\n",
-      "Fetched 399 kB in 0s (4,202 kB/s)\n",
+      "Fetched 399 kB in 0s (2,768 kB/s)\n",
       "debconf: unable to initialize frontend: Dialog\n",
       "debconf: (No usable dialog-like program is installed, so the dialog based frontend cannot be used. at /usr/share/perl5/Debconf/FrontEnd/Dialog.pm line 78, <> line 4.)\n",
       "debconf: falling back to frontend: Readline\n",
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,31 +166,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stderr",
      "text": [
-      "[13:09:49] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
+      "[06:25:42] SIMPLE: Warning - no explicit hydrogens in mol2 file but needed for formal charge estimation.\n"
      ]
     }
    ],
    "source": [
-    "mol = rdkit.Chem.MolFromMol2File('./two_rot_simple.mol2')"
+    "mol = rdkit.Chem.MolFromMol2File('./two_rot_simple_final.mol2')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "output_type": "display_data",
      "data": {
-      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_16842449096437204\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16842449096437204\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16842449096437204 = null;\nvar warn = document.getElementById(\"3dmolwarning_16842449096437204\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16842449096437204 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16842449096437204\"),{backgroundColor:\"white\"});\nviewer_16842449096437204.zoomTo();\n\tviewer_16842449096437204.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16842449096437204.setStyle({\"stick\": {}});\n\tviewer_16842449096437204.zoomTo();\nviewer_16842449096437204.render();\n});\n</script>",
-      "text/html": "<div id=\"3dmolviewer_16842449096437204\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_16842449096437204\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_16842449096437204 = null;\nvar warn = document.getElementById(\"3dmolwarning_16842449096437204\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_16842449096437204 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_16842449096437204\"),{backgroundColor:\"white\"});\nviewer_16842449096437204.zoomTo();\n\tviewer_16842449096437204.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  4  3  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    1.0000    1.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\nM  RAD  4   1   2   2   3   3   3   4   2\\nM  END\\n\",\"mol\");\n\tviewer_16842449096437204.setStyle({\"stick\": {}});\n\tviewer_16842449096437204.zoomTo();\nviewer_16842449096437204.render();\n});\n</script>"
+      "application/3dmoljs_load.v0": "<div id=\"3dmolviewer_1684909545134986\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1684909545134986\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1684909545134986 = null;\nvar warn = document.getElementById(\"3dmolwarning_1684909545134986\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1684909545134986 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1684909545134986\"),{backgroundColor:\"white\"});\nviewer_1684909545134986.zoomTo();\n\tviewer_1684909545134986.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  5  4  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n   -1.0000    1.5000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n   -2.0000    1.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\n  4  5  1  0\\nM  RAD  5   1   2   2   3   3   3   4   3   5   2\\nM  END\\n\",\"mol\");\n\tviewer_1684909545134986.setStyle({\"stick\": {}});\n\tviewer_1684909545134986.zoomTo();\nviewer_1684909545134986.render();\n});\n</script>",
+      "text/html": "<div id=\"3dmolviewer_1684909545134986\"  style=\"position: relative; width: 500px; height: 250px\">\n        <p id=\"3dmolwarning_1684909545134986\" style=\"background-color:#ffcccc;color:black\">You appear to be running in JupyterLab (or JavaScript failed to load for some other reason).  You need to install the 3dmol extension: <br>\n        <tt>jupyter labextension install jupyterlab_3dmol</tt></p>\n        </div>\n<script>\n\nvar loadScriptAsync = function(uri){\n  return new Promise((resolve, reject) => {\n    //this is to ignore the existence of requirejs amd\n    var savedexports, savedmodule;\n    if (typeof exports !== 'undefined') savedexports = exports;\n    else exports = {}\n    if (typeof module !== 'undefined') savedmodule = module;\n    else module = {}\n\n    var tag = document.createElement('script');\n    tag.src = uri;\n    tag.async = true;\n    tag.onload = () => {\n        exports = savedexports;\n        module = savedmodule;\n        resolve();\n    };\n  var firstScriptTag = document.getElementsByTagName('script')[0];\n  firstScriptTag.parentNode.insertBefore(tag, firstScriptTag);\n});\n};\n\nif(typeof $3Dmolpromise === 'undefined') {\n$3Dmolpromise = null;\n  $3Dmolpromise = loadScriptAsync('https://cdnjs.cloudflare.com/ajax/libs/3Dmol/2.0.1/3Dmol-min.js');\n}\n\nvar viewer_1684909545134986 = null;\nvar warn = document.getElementById(\"3dmolwarning_1684909545134986\");\nif(warn) {\n    warn.parentNode.removeChild(warn);\n}\n$3Dmolpromise.then(function() {\nviewer_1684909545134986 = $3Dmol.createViewer(document.getElementById(\"3dmolviewer_1684909545134986\"),{backgroundColor:\"white\"});\nviewer_1684909545134986.zoomTo();\n\tviewer_1684909545134986.addModel(\"SIMPLE\\n     RDKit          3D\\n\\n  5  4  0  0  0  0  0  0  0  0999 V2000\\n    1.0000   -0.5000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n    0.0000    0.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n    0.0000    1.0000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n   -1.0000    1.5000    0.0000 C   0  0  0  0  0  2  0  0  0  0  0  0\\n   -2.0000    1.0000    0.0000 C   0  0  0  0  0  1  0  0  0  0  0  0\\n  1  2  1  0\\n  2  3  1  0\\n  3  4  1  0\\n  4  5  1  0\\nM  RAD  5   1   2   2   3   3   3   4   3   5   2\\nM  END\\n\",\"mol\");\n\tviewer_1684909545134986.setStyle({\"stick\": {}});\n\tviewer_1684909545134986.zoomTo();\nviewer_1684909545134986.render();\n});\n</script>"
      },
      "metadata": {}
     }
