--- a/QMU_pwc.ipynb
+++ b/QMU_pwc.ipynb
@@ -25,8 +25,15 @@
  "nbformat_minor": 2,
  "cells": [
   {
+   "source": [
+    "# Import necessary packages"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 48,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,6 +44,13 @@
   },
   {
    "source": [
+    "# Input Variables"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "coords_original - Coordinates considered for distance measure in the hubo<br>torsional_bonds - Torsional bond numbers and their respective coordinate ends<br>coords_rotation_dict - Coordinate numbers and the bonds that affect them<br>distance_pairs - Pairs of coordinates to find distance"
    ],
    "cell_type": "markdown",
@@ -44,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -138,8 +152,15 @@
    ]
   },
   {
+   "source": [
+    "# Functions to rotate coordinates with hubo variables"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -205,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,15 +242,8 @@
    ]
   },
   {
-   "source": [
-    "Find new coordinates in terms of hubo monomials"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
-  },
-  {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -238,7 +252,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
@@ -255,7 +269,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
@@ -272,14 +286,14 @@
   },
   {
    "source": [
-    "Functions to generate the optimization contraint in hubo"
+    "# Functions to generate the optimization contraint in hubo"
    ],
    "cell_type": "markdown",
    "metadata": {}
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 60,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -296,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -313,8 +327,15 @@
    ]
   },
   {
+   "source": [
+    "# The full hubo expression is written in the file 'full_hubo_expr.txt'"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
@@ -333,13 +354,6 @@
     "f.write(hubo_expr_str)\n",
     "f.close()"
    ]
-  },
-  {
-   "source": [
-    "The full hubo expression is written in the file 'full_hubo_expr.txt'"
-   ],
-   "cell_type": "markdown",
-   "metadata": {}
   },
   {
    "cell_type": "code",
